<resources>
    <string name="app_name">Material_Personas</string>
    <string name="action_settings">Settings</string>
    <string name="crear_persona">Crear Persona</string>
    <string name="cedula">Ingrese su Cedula</string>
    <string name="nombre">Ingrese su Nombre</string>
    <string name="apellido">Ingrese su Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="vacio">Seleccione un sexo</string>
    <string-array name="sexo">
        <item>@string/vacio</item>
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>
    <string name="mensaje_guardado_exitoso">¡Persona guardada exitosamente!</string>
</resources>
